# near_hackathon

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  src.3e88ae3a.css  src.3e88ae3a.css.map  src.813913ec.js  src.ba8bb633.js  src.e0df0284.js  src.e31bb0bc.css  src.e31bb0bc.css.map
.cargo/: config
client/: README.md  package.json
client/contract/: README.md
client/src/: App.js  config.js  global.css  index.js  utils.js
contracts/: Cargo.toml  README.md
contracts/factory/: Cargo.toml
contracts/ft/: Cargo.toml
contracts/market/: Cargo.toml
contracts/market/src/: callbacks.rs  external.rs  internal.rs  lib.rs  sale.rs  sale_views.rs
contracts/near-1155/: Cargo.toml  README.md
contracts/nft/: Cargo.toml
contracts/scripts/: build.sh  deploy.sh  init.sh
contracts/utils/: Cargo.toml
docs/: crates.js  index.html  search-index.js  settings.html  source-files.js
docs/fungible_token/: all.html  enum.Type.html  fn.ft_balance_of.html  fn.ft_metadata.html  fn.ft_mint.html  fn.ft_resolve_transfer.html  fn.ft_total_supply.html  fn.ft_transfer.html  fn.ft_transfer_by_signer.html  fn.ft_transfer_call.html  fn.ft_transfer_safe.html  fn.is_registered.html  fn.new.html  fn.register.html  fn.storage_balance_bounds.html  fn.storage_balance_of.html  fn.storage_deposit.html  fn.storage_withdraw.html  (+5 more)
examples/approval-receiver/: Cargo.toml
examples/approval-receiver/scripts/: build.sh
examples/approval-receiver/src/: lib.rs
examples/multi-token/: Cargo.toml
examples/multi-token/scripts/: build.sh
examples/multi-token/src/: lib.rs
factory/: Cargo.toml
ft/: Cargo.toml
scripts/: build.sh  deploy.sh
server/: .env.example  .eslintrc.js  .prettierrc  package-lock.json  package.json
src/: event.rs  lib.rs
(+271 files in other folders)
